fix: design and visibility ads

--- a/components/design/search_component.css
+++ b/components/design/search_component.css
@@ -108,3 +108,7 @@
   width: 70%;
   text-align: center;
 }
+
+#search_component #like {
+  padding: 9px;
+}
